# ab-download-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DONATE.md  README.md  REST-API.md  REST-API.yml  build.gradle.kts  coding_plan.md  crowdin.yml  flake.nix  gradle.properties  package-rhel.sh  plan.md  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: brew-cask-auto-bump.yml  publish.yml  sync-upstream.yml  winget.yml
Casks/: ab-download-manager.rb
android/app/: build.gradle.kts  filetypes.txt  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/abdownloadmanager/android/: ABDMApp.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_monochrome.xml
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  theme.xml
android/app/src/main/res/xml/: provider_paths.xml
assets/: com.abdownloadmanager.abdownloadmanager.desktop  com.abdownloadmanager.abdownloadmanager.metainfo.xml
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: Plugins.kt
buildSrc/src/main/kotlin/buildlogic/: CiDirs.kt  CiUtils.kt  HashUtils.kt
buildSrc/src/main/kotlin/buildlogic/versioning/: VersionUtil.kt
buildSrc/src/main/kotlin/myPlugins/: composeAndroid.gradle.kts  composeBase.gradle.kts  composeDesktop.gradle.kts  kotlin.gradle.kts  kotlinAndroid.gradle.kts  kotlinMultiplatform.gradle.kts  proguardDesktop.gradle.kts
cli/: CLI.md
cli/app/: build.gradle.kts
cli/app/src/main/kotlin/com/abdownloadmanager/cli/: CliContext.kt  CliMain.kt
compositeBuilds/plugins/: settings.gradle.kts
compositeBuilds/plugins/common-android/: build.gradle.kts
compositeBuilds/plugins/git-version-plugin/: build.gradle.kts
compositeBuilds/plugins/installer-plugin/: build.gradle.kts
compositeBuilds/shared/: README.md  build.gradle.kts  settings.gradle.kts
compositeBuilds/shared/platform/: build.gradle.kts
desktop/app/: build.gradle.kts  gradle.properties
desktop/app-utils/: build.gradle.kts
desktop/app/icons/: icon.icns
desktop/app/proguard/: decompose.pro  main.pro  okhttp.pro
desktop/app/resources/common/: app.properties
desktop/app/resources/installer/: AddToPath.nsh  RemoveFromPath.nsh  abdm-cli.bat  nsis-script-template.nsi
desktop/app/src/main/kotlin/com/abdownloadmanager/desktop/: App.kt  AppArguments.kt  AppComponent.kt  MainApplication.kt  SharedConstants.kt  SingleInstanceServerInitializer.kt
desktop/app/src/main/resources/configs/: app_default.properties
desktop/app/src/main/resources/strings/: strings_en.properties  strings_zh.properties
desktop/app/src/test/kotlin/com/abdownloadmanager/desktop/: LanguageSupportTest.kt
desktop/custom-window-frame/: build.gradle.kts
desktop/jewel/: build.gradle.kts
desktop/mac_utils/: build.gradle.kts
desktop/shared/: build.gradle.kts
desktop/slf4j-impl/: build.gradle.kts
desktop/tray/: build.gradle.kts
desktop/tray/common/: build.gradle.kts
desktop/tray/linux/: build.gradle.kts
desktop/tray/mac/: build.gradle.kts
downloader/core/: build.gradle.kts
downloader/core/src/commonMain/kotlin/com/xeton/downloader/: DownloadManager.kt  DownloadManagerMinimalControl.kt  DownloadSettings.kt  Downloader.kt  DownloaderRegistry.kt  NewDownloadItemProps.kt
downloader/core/src/commonMain/kotlin/ir/amirab/downloader/: DownloadManager.kt  Downloader.kt  DownloaderRegistry.kt
downloader/core/src/main/kotlin/ir/amirab/downloader/: DownloadManager.kt  DownloadManagerMinimalControl.kt  DownloadSettings.kt  Downloader.kt  DownloaderRegistry.kt  NewDownloadItemProps.kt
downloader/monitor/: build.gradle.kts
extension/: background.js  intercept.html  intercept.js  manifest.json  popup.html  popup.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
integration/client/: build.gradle.kts
integration/server/: build.gradle.kts
integration/server/src/main/kotlin/com/abdownloadmanager/integration/: ApiDownloadModel.kt  ApiQueueModel.kt  DownloadCredentialsFromIntegration.kt  Endpoints.kt  HttpDownloadCredentialsFromIntegration.kt  IdRequest.kt  IdsRequest.kt  Integration.kt  IntegrationHandler.kt  KtorServer.kt  (+6 more)
integration/server/src/main/resources/: logback.xml
manifests/: com.xeton.integration.json
rust/xeton_core/: Cargo.toml  build.rs  scratch.rs
rust/xeton_core/src/: downloader.rs  lib.rs  manager.rs  models.rs  throttle.rs  transcoder.rs  uniffi_api.rs  xeton_core.udl
rust/xeton_core/src/connection/: mod.rs  proxy.rs
rust/xeton_core/src/db/: mod.rs  progress_batcher.rs  store.rs
rust/xeton_core/src/destination/: mod.rs
rust/xeton_core/src/extractors/: mod.rs  social.rs  soundcloud.rs  spotify.rs  ytdlp.rs
rust/xeton_core/src/hls/: job.rs  mod.rs
rust/xeton_core/src/http/: job.rs  mod.rs
rust/xeton_core/src/part/: mod.rs
rust/xeton_core/src/protocols/: ftp.rs  mod.rs  torrent.rs
rust/xeton_core/src/queue/: manager.rs  mod.rs
rust/xeton_core/src/sync/: client.rs  mod.rs  server.rs
rust/xeton_core/src/transcoder/: extractor.rs  ffi.rs  merger.rs  mod.rs
scripts/: install.sh  uninstall.sh
shared/app/: build.gradle.kts
shared/app-utils/: build.gradle.kts
shared/auto-start/: build.gradle.kts
shared/compose-utils/: build.gradle.kts
shared/config/: build.gradle.kts
shared/nanohttp4k/: build.gradle.kts
shared/nanohttp4k/src/main/resources/: rules.pro
shared/resources/: build.gradle.kts
shared/resources/contracts/: build.gradle.kts
shared/updater/: build.gradle.kts
shared/updater/src/androidMain/kotlin/: AndroidDirectLinkUpdateApplier.kt  ApkInstaller.kt
shared/updater/src/commonMain/kotlin/com/abdownloadmanager/: ArtifactUtil.kt  UpdateManager.kt
shared/updater/src/main/kotlin/com/abdownloadmanager/: ArtifactUtil.kt  UpdateDownloadLocationProvider.kt  UpdateManager.kt
shared/utils/: build.gradle.kts
shared/utils/src/commonMain/kotlin/com/xeton/: SelectionUtil.kt
shared/utils/src/commonMain/kotlin/ir/amirab/: SelectionUtil.kt
(+1941 files in other folders)
